refactor(shared): align mailer templates and global services with updated config naming

--- a/src/shared/modules/global/mailer/templates/layouts/newsletter.hbs
+++ b/src/shared/modules/global/mailer/templates/layouts/newsletter.hbs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>MyApp Newsletter</title>
+  <title>{{appName}} Newsletter</title>
   <style>
     body {
       font-family: Arial, sans-serif;
