--- a/src/shared/modules/global/mailer/templates/partials/newsletter-footer.hbs
+++ b/src/shared/modules/global/mailer/templates/partials/newsletter-footer.hbs
@@ -1,5 +1,5 @@
 <div style="text-align: center; font-size: 12px; color: #888; margin-top: 30px;">
-  <p>You are receiving this newsletter because you subscribed to MyApp.</p>
-  <p><a href="https://myapp.com/unsubscribe">Unsubscribe</a></p>
-  <p>&copy; 2025 MyApp</p>
+  <p>You are receiving this newsletter because you subscribed to {{appName}}.</p>
+  <p><a href="{{unsubscribeLink}}">Unsubscribe</a></p>
+  <p>&copy; {{year}} {{appName}}</p>
 </div>
