--- a/src/shared/modules/global/mailer/templates/partials/newsletter-header.hbs
+++ b/src/shared/modules/global/mailer/templates/partials/newsletter-header.hbs
@@ -1,3 +1,3 @@
 <div style="text-align: center; margin-bottom: 20px;">
-  <h1 style="color: #673ab7;">MyApp Monthly</h1>
+  <h1 style="color: #673ab7;">{{appName}} Monthly</h1>
 </div>
