--- a/src/shared/modules/global/mailer/templates/default-otp.hbs
+++ b/src/shared/modules/global/mailer/templates/default-otp.hbs
@@ -1,6 +1,11 @@
 <h2>Hi Sekhudin,</h2>
 <p>Your One-Time Password (OTP) is:</p>
-
+<div>
+  {{appName}}
+  {{year}}
+  {{billingAddressEmail}}
+  {{unsubscribeLink}}
+</div>
 <h1 style="letter-spacing: 4px; background: #eee; padding: 10px; display: inline-block;">123456</h1>
 
 <p>This code is valid for 5 minutes. Please do not share it.</p>
