--- a/src/shared/modules/global/mailer/templates/partials/billing-header.hbs
+++ b/src/shared/modules/global/mailer/templates/partials/billing-header.hbs
@@ -1,3 +1,3 @@
 <div style="text-align: center; margin-bottom: 20px;">
-  <h1 style="color: #4caf50;">MyApp Billing</h1>
+  <h1 style="color: #4caf50;">{{appName}} Billing</h1>
 </div>
