--- a/src/shared/modules/global/mailer/templates/partials/otp-footer.hbs
+++ b/src/shared/modules/global/mailer/templates/partials/otp-footer.hbs
@@ -1,4 +1,4 @@
-<div style="text-align: center; font-size: 12px; color: #888; margin-top: 30px;">
-  <p>This OTP email was sent by MyApp.</p>
-  <p>&copy; 2025 MyApp</p>
+<div style="text-align: center; font-size: 13px; color: #888; margin-top: 32px;">
+  <p>This security email was sent by {{appName}}.</p>
+  <p>&copy; {{year}} {{appName}}. All rights reserved.</p>
 </div>
