--- a/src/shared/modules/global/mailer/templates/partials/otp-header.hbs
+++ b/src/shared/modules/global/mailer/templates/partials/otp-header.hbs
@@ -1,3 +1,3 @@
-<div style="text-align: center; margin-bottom: 20px;">
-  <h1 style="color: #2196f3;">MyApp Security</h1>
+<div style="text-align: center; margin-bottom: 24px;">
+  <h1 style="color: #007bff; font-size: 24px; margin: 0;">{{appName}} Security</h1>
 </div>
